--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-maps-api": "^2.0.1",
     "leaflet-geometryutil": "^0.8.0",
     "leaflet.heat": "^0.2.0",
     "material-ui": "^0.18.7",
