--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
-    "google-maps-api": "^2.0.1",
+    "@google/maps": "^0.4.3",
     "leaflet-geometryutil": "^0.8.0",
     "leaflet.heat": "^0.2.0",
     "material-ui": "^0.18.7",
