--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "leaflet-geometryutil": "^0.8.0",
     "leaflet.heat": "^0.2.0",
     "material-ui": "^0.18.7",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-leaflet": "^1.4.1",
